<resources>
    <string name="app_name">MyApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Sign In</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="no_account">No Account?</string>
    <string name="register">Sign Up</string>
    <string name="name_not_null">UserName Cannot be null!</string>
    <string name="password_not_null">Password Cannot be null!</string>
    <string name="name_pwd_error">Name or Password error!</string>
    <string name="repeat_pwd">Repeat Password</string>
    <string name="submit">Submit</string>
    <string name="pwd_too_short">Password too short!</string>
    <string name="pwd_not_same">Password not same!</string>
    <string name="name_exist">Username already exists!</string>
    <string name="register_sucess">Successfully registered</string>
</resources>
