<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/reg_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/edit_padding"
            android:layout_marginRight="@dimen/edit_padding"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/reg_pwd"
            android:layout_below="@+id/reg_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/edit_padding"
            android:layout_marginRight="@dimen/edit_padding"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_pwd"
            android:id="@+id/repeat_pwd"
            android:layout_below="@+id/reg_pwd"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/edit_padding"
            android:layout_marginRight="@dimen/edit_padding"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_below="@+id/repeat_pwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/edit_padding"/>
    </RelativeLayout>

</RelativeLayout>